[package]
name = "cyclone-msm"
version = "0.1.0-pre"
authors = [
    "Kaveh Aasaraai <kaasaraai@jumptrading.com>",
    "Emanuele Cesena <ecesena@jumptrading.com>",
    "Rahul Maganti <rmaganti@jumpcrypto.com>",
    "Nicolas Stalder <nicolas@jumpcrypto.com>"
]
description = "A benchmark library for finite fields and elliptic curves"
homepage = "https://jumpcrypto.com"
repository = "https://github.com/jumpcrypto/cyclone-msm"
documentation = "https://docs.rs/cyclone-msm"
keywords = ["cryptography", "elliptic-curves", "fpga", "msm"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 OR MIT"
edition = "2021"

[features]
default = ["hw"]
hw = ["fpga/f1"]
demo = ["argh"]
timings = []

[dependencies]
ark-ec = { version = "0.4.0-alpha.1", default-features = false }
ark-ff = { version = "0.4.0-alpha.3", default-features = false }
ark-bls12-377 = { version = "0.4.0-alpha.1" }
ark-std = { version = "0.4.0-alpha", default-features = false }

derivative = "2.2"
fpga = { path = "fpga", default-features = false }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
rayon = { version = "1.5.3" }
seq-macro = "0.3"

argh = { version = "0.1", optional = true }

[dev-dependencies]
argh = "0.1"

[[example]]
name = "add"
required-features = ["hw"]

[[example]]
name = "neg"
required-features = ["hw"]

[[example]]
name = "sub"
required-features = ["hw"]

[[bin]]
name = "cyclone-msm"
path ="src/bin/demo.rs"
required-features = ["demo"]
