[package]
name = "cyclone-fpga"
edition = "2021"
rust-version = "1.62"
version = "0.1.0-pre"

authors = [
    "Kaveh Aasaraai <kaasaraai@jumptrading.com>",
    "Nicolas Stalder <nicolas@jumpcrypto.com>"
]
description = "FPGA driver"
documentation = "https://docs.rs/cyclone-fpga"
homepage = "https://jumpcrypto.com"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jumpcrypto/cyclone"
readme = "README.md"

categories = ["cryptography", "hardware-support"]
keywords = ["cryptography", "elliptic-curves", "fpga", "msm"]

[dependencies]
cyclone-f1-sys = { version = "0.1.0-pre", path = "f1-sys", optional = true }
thiserror = "1"

[features]
default = ["f1"]
f1 = ["cyclone-f1-sys"]
