[package]
name = "cyclone-f1-sys"
edition = "2021"
rust-version = "1.62"
version = "0.1.0-pre"

authors = [
    "Kaveh Aasaraai <kaasaraai@jumptrading.com>",
    "Nicolas Stalder <nicolas@jumpcrypto.com>"
]
description = "FPGA driver C bindings"
documentation = "https://docs.rs/cyclone-fpga-sys"
homepage = "https://jumpcrypto.com"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jumpcrypto/cyclone"

categories = ["hardware-support"]
keywords = ["cryptography", "elliptic-curves", "fpga", "msm"]

[dependencies]
cty = "0.2"

[build-dependencies]
bindgen = "0.63"
cc = "1"
